Add secrets to pod

--- a/templates/bot.yaml
+++ b/templates/bot.yaml
@@ -25,4 +25,6 @@ spec:
           image: {{ .Values.image }}
           args:
             - handle-updates
-
+          envFrom:
+            - secretRef:
+                name: secrets
