--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "~3.10"
-click = "8.1.3"
+click = "^8.1.3"
 requests = "2.27.1"
 sentry-sdk = "1.5.10"
 
 [tool.poetry.dev-dependencies]
-black = "22.3.0"
-flake8 = "4.0.1"
+black = "^22.3.0"
+flake8 = "^4.0.1"
 mypy = "0.942"
 types-requests = "2.27.20"
 
