--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.10"
 click = "^8.1.3"
 requests = "2.28.0"
 sentry-sdk = "1.6.0"
+slack-bolt = "^1.14.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
