--- a/templates/base_secrets.yaml
+++ b/templates/base_secrets.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secrets
+  name: base
 stringData:
-  TELEGRAM_API_KEY: {{ .Values.apiToken.telegram | quote }}
   SONGLINK_API_TOKEN: {{ .Values.apiToken.songlink | quote }}
