--- a/templates/telegram_bot.yaml
+++ b/templates/telegram_bot.yaml
@@ -2,23 +2,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bot
+  name: telegram_bot
 spec:
   clusterIP: None
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: bot
+  name: telegram_bot
 spec:
   selector:
     matchLabels:
-      app: bot
-  serviceName: bot
+      app: telegram_bot
+  serviceName: telegram_bot
   template:
     metadata:
       labels:
-        app: bot
+        app: telegram_bot
     spec:
       containers:
         - name: app
@@ -27,4 +27,6 @@ spec:
             - handle-updates
           envFrom:
             - secretRef:
-                name: secrets
+                name: base
+            - secretRef:
+                name: telegram
