--- a/templates/telegram_bot.yaml
+++ b/templates/telegram_bot.yaml
@@ -2,23 +2,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: telegram_bot
+  name: telegram-bot
 spec:
   clusterIP: None
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: telegram_bot
+  name: telegram-bot
 spec:
   selector:
     matchLabels:
-      app: telegram_bot
-  serviceName: telegram_bot
+      app: telegram-bot
+  serviceName: telegram-bot
   template:
     metadata:
       labels:
-        app: telegram_bot
+        app: telegram-bot
     spec:
       containers:
         - name: app
