--- a/templates/slack_app.yaml
+++ b/templates/slack_app.yaml
@@ -36,6 +36,9 @@ spec:
           image: {{ .Values.image }}
           args:
             - run-slack-app
+          env:
+            - name: SLACK_PORT
+              value: "3000"
           ports:
             - containerPort: 3000
           envFrom:
