--- a/templates/base_secrets.yaml
+++ b/templates/base_secrets.yaml
@@ -3,4 +3,5 @@ kind: Secret
 metadata:
   name: base
 stringData:
+  SENTRY_DSN: {{ .Values.sentry.dsn | quote }}
   SONGLINK_API_TOKEN: {{ .Values.apiToken.songlink | quote }}
