--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "~3.11"
 click = "^8.1.3"
-requests = "2.28.2"
-sentry-sdk = "1.14.0"
+requests = "^2.28.2"
+sentry-sdk = "^1.14.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.0.0"
-mypy = "1.0.0"
-types-requests = "2.28.11.12"
+mypy = "~1.0"
+types-requests = "^2.28.11"
 
 [build-system]
 requires = ["poetry-core>=1.3.0"]
