--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,6 +36,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: push_docker
+    concurrency: production
     steps:
       - uses: actions/checkout@v3
       - name: Substitute environment variables in values.yaml
@@ -48,5 +49,5 @@ jobs:
           TELEGRAM_API_TOKEN: ${{ secrets.TELEGRAM_API_TOKEN }}
       - uses: WyriHaximus/github-action-helm3@v3
         with:
-          exec: helm upgrade bot . --install --namespace=telegram-songlinker-bot
+          exec: helm upgrade bot . --install --namespace=telegram-songlinker-bot --atomic
           kubeconfig: '${{ secrets.KUBECONFIG_RAW }}'
