--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ jobs:
     container: python:3.11-slim
     steps:
       - name: Install Poetry
-        run: pip install poetry
+        run: pip install poetry==1.4.0
       - uses: actions/checkout@v3
       - run: poetry install
       - name: Check coding standards
