--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,13 @@ click = "^8.1.3"
 requests = "^2.28.2"
 sentry-sdk = "^1.14.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.0.0"
+isort = "^5.12.0"
 mypy = "~1.4.0"
+pytest = "^7.4.0"
 types-requests = "^2.28.11"
+
 
 [build-system]
 requires = ["poetry-core>=1.3.0"]
