--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "~3.11"
 click = "^8.1.3"
+httpx = "^0.24.1"
 requests = "^2.28.2"
 sentry-sdk = "^1.14.0"
 
