--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ isort = "^5.12.0"
 mypy = "~1.4.0"
 pytest = "^7.4.0"
 
-
 [build-system]
 requires = ["poetry-core>=1.3.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
