Add setup to split integration and unit tests

--- a/templates/base_secrets.yaml
+++ b/templates/base_secrets.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: base
 stringData:
-  SENTRY_DSN: {{ .Values.sentry.dsn | quote }}
-  SONGLINK_API_TOKEN: {{ .Values.apiToken.songlink | quote }}
+  SENTRY_DSN: "{{ .Values.sentry.dsn }}"
+  SONGLINK_API_TOKEN: "{{ .Values.apiToken.songlink }}"
