--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,19 @@ jobs:
           poetry run isort --check-only src/
           poetry run mypy src/
 
-  test:
+  integration-test:
+    runs-on: ubuntu-latest
+    if: github.ref_name == github.event.repository.default_branch
+    container: python:3.11-slim
+    steps:
+      - name: Install Poetry
+        run: pip install poetry==1.5.1
+      - uses: actions/checkout@v3
+      - run: poetry install
+      - name: Run tests
+        run: poetry run pytest -m "integration" src/
+
+  unit-test:
     runs-on: ubuntu-latest
     container: python:3.11-slim
     steps:
@@ -28,14 +40,14 @@ jobs:
       - uses: actions/checkout@v3
       - run: poetry install
       - name: Run tests
-        run: poetry run pytest src/
+        run: poetry run pytest -m "not integration" src/
 
   build-container-image:
     runs-on: ubuntu-latest
     if: success() && github.event_name == 'pull_request'
     needs:
       - lint
-      - test
+      - unit-test
     steps:
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v4
@@ -49,8 +61,9 @@ jobs:
     runs-on: ubuntu-latest
     if: success() && github.ref_name == github.event.repository.default_branch
     needs:
+      - integration-test
       - lint
-      - test
+      - unit-test
     steps:
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v4
@@ -80,8 +93,6 @@ jobs:
         env:
           IMAGE_NAME: "ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER_PART_SLUG }}/${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG }}"
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
           SONGLINK_API_TOKEN: ${{ secrets.SONGLINK_API_TOKEN }}
           TELEGRAM_API_TOKEN: ${{ secrets.TELEGRAM_API_TOKEN }}
       - uses: WyriHaximus/github-action-helm3@v3
