--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "~3.11"
 click = "^8.1.3"
 httpx = "^0.24.1"
+pydantic = "^2.1.1"
 sentry-sdk = "^1.14.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -16,6 +17,7 @@ black = "^23.0.0"
 isort = "^5.12.0"
 mypy = "~1.4.0"
 pytest = "^7.4.0"
+pytest-mock = "^3.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.3.0"]
