--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
+
+[tool.pytest.ini_options]
+markers = [
+    "integration",
+]
