--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ isort = "^5.12.0"
 mypy = "~1.4.0"
 pytest = "^7.4.0"
 pytest-mock = "^3.11.1"
+vcrpy = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.3.0"]
