--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ markers = [
     "integration",
 ]
 
+[tool.mypy]
+# TODO: strict = true
+check_untyped_defs = true
+
 [[tool.mypy.overrides]]
 module = "vcr"
 ignore_missing_imports = true
