Configure pydantic mypy plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,8 @@ check_untyped_defs = true
 [[tool.mypy.overrides]]
 module = "vcr"
 ignore_missing_imports = true
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
