--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "songlinker"
 description = "Links songs"
 version = "3.0.0"
-authors = ["OpenAlcoholics <team@openalcoholics.group>"]
+authors = ["BlindfoldedSurgery <team@blindfolded.surgery>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -14,19 +14,16 @@ sentry-sdk = "^1.14.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.0.0"
-isort = "^5.12.0"
 mypy = "~1.6"
 pytest = "^7.4.0"
 pytest-mock = "^3.11.1"
 pytest-recording = "^0.13.0"
+ruff = "0.0.292"
 vcrpy = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.3.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
 
 [tool.pytest.ini_options]
 markers = [
@@ -34,9 +31,15 @@ markers = [
 ]
 
 [tool.mypy]
-# TODO: strict = true
-plugins = [ "pydantic.mypy" ]
+strict = true
 check_untyped_defs = true
+plugins = ["pydantic.mypy"]
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+check_untyped_defs = true
+allow_untyped_defs = true
+allow_incomplete_defs = true
 
 [[tool.mypy.overrides]]
 module = "vcr"
@@ -45,3 +48,14 @@ ignore_missing_imports = true
 [tool.pydantic-mypy]
 init_forbid_extra = true
 init_typed = true
+
+[tool.ruff]
+extend-select = [
+    "I001",
+]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.isort]
+known-first-party = ["songlinker"]
