--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,14 @@ version = "3.0.0"
 authors = ["BlindfoldedSurgery <team@blindfolded.surgery>"]
 license = "MIT"
 
+[[tool.poetry.source]]
+name = "internal"
+url = "https://pypi.blindfolded.surgery"
+priority = "explicit"
+
 [tool.poetry.dependencies]
 python = "~3.11"
+bs-config = { version = "0.2.0", source = "internal" }
 click = "^8.1.3"
 httpx = "^0.25.0"
 pydantic = "^2.1.1"
