--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ priority = "explicit"
 
 [tool.poetry.dependencies]
 python = "~3.12"
-bs-config = { version = "1.0.1", source = "internal" }
+bs-config = { version = "1.0.1", source = "internal", extras = ["dotenv"] }
 click = "^8.1.3"
 httpx = "^0.27.0"
 pydantic = "^2.1.1"
