--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,13 +55,13 @@ ignore_missing_imports = true
 init_forbid_extra = true
 init_typed = true
 
-[tool.ruff]
+[tool.ruff.lint]
 extend-select = [
     "I001",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["songlinker"]
