--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ sentry-sdk = "^1.14.0"
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
 mypy = "~1.8"
+opentelemetry-api = "~1.23"
+opentelemetry-sdk = "~1.23"
+opentelemetry-exporter-otlp-proto-grpc = "~1.23"
+opentelemetry-instrumentation-httpx = "*"
+opentelemetry-instrumentation-logging = "*"
 pytest = "^8.0.0"
 pytest-mock = "^3.11.1"
 pytest-recording = "^0.13.0"
