Enable telemetry in production

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -95,6 +95,7 @@ jobs:
       - name: Substitute environment variables in values.yaml
         run: "envsubst < values.yaml > values_sub.yaml && mv values_sub.yaml values.yaml"
         env:
+          HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
           IMAGE_NAME: "ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER_PART_SLUG }}/${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG }}"
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
           SONGLINK_API_TOKEN: ${{ secrets.SONGLINK_API_TOKEN }}
