--- a/values.yaml
+++ b/values.yaml
@@ -2,5 +2,7 @@ image: ${IMAGE_NAME}:${GITHUB_SHA}
 apiToken:
   songlink: ${SONGLINK_API_TOKEN}
   telegram: ${TELEGRAM_API_TOKEN}
+honeycomb:
+  team: ${HONEYCOMB_API_TOKEN}
 sentry:
   dsn: ${SENTRY_DSN}
