--- a/templates/telegram_bot.yaml
+++ b/templates/telegram_bot.yaml
@@ -15,6 +15,7 @@ spec:
     matchLabels:
       app: telegram-bot
   serviceName: telegram-bot
+  replicas: 1
   template:
     metadata:
       labels:
