--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ priority = "explicit"
 
 [tool.poetry.dependencies]
 python = "~3.12"
-bs-config = { version = "1.0.1", source = "internal", extras = ["dotenv"] }
+bs-config = { tag = "v1.0.1", extras = ["dotenv"], git = "https://github.com/BlindfoldedSurgery/bs-config.git" }
 click = "^8.1.3"
 httpx = "^0.27.0"
 opentelemetry-api = "~1.23"
