Switch to ArgoCD

--- a/chart/templates/telegram_bot.yaml
+++ b/chart/templates/telegram_bot.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: {{ .Values.image }}
+          image: {{ .Values.imageName }}:{{ .Values.appVersion }}
           args:
             - handle-updates
           env:
