--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,28 +48,15 @@ jobs:
       push-image: ${{ github.ref_name == github.event.repository.default_branch }}
 
   deploy:
-    runs-on: born-prep
-    container: ghcr.io/bjoernpetersen/helm:2.1.0
+    runs-on: ubuntu-latest
+    if: github.ref_name == github.event.repository.default_branch
     needs:
       - build-container-image
-    concurrency: production
-    if: success() && github.ref_name == github.event.repository.default_branch
     steps:
-      - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v4
       - uses: actions/checkout@v4
-      - name: Substitute environment variables in values.yaml
-        run: "envsubst < values.yaml > values_sub.yaml && mv values_sub.yaml values.yaml"
-        env:
-          HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
-          IMAGE_NAME: "ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER_PART_SLUG }}/${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG }}"
-          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          SONGLINK_API_TOKEN: ${{ secrets.SONGLINK_API_TOKEN }}
-          TELEGRAM_API_TOKEN: ${{ secrets.TELEGRAM_API_TOKEN }}
-      - uses: WyriHaximus/github-action-helm3@v4
         with:
-          exec: helm upgrade bot . --install --namespace=songlinker-bot --atomic
-          kubeconfig: '${{ secrets.BORN_KUBECONFIG_RAW }}'
+          fetch-depth: 0
+      - run: git push origin main:release
 
   clean:
     concurrency: cleanup
