--- a/chart/templates/telegram_bot.yaml
+++ b/chart/templates/telegram_bot.yaml
@@ -33,6 +33,4 @@ spec:
               value: https://api.honeycomb.io
           envFrom:
             - secretRef:
-                name: base
-            - secretRef:
-                name: telegram
+                name: secrets
