--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ license = "MIT"
 
 [[tool.poetry.source]]
 name = "internal"
-url = "https://pypi.blindfolded.surgery"
+url = "https://pypi.bjoernpetersen.net"
 priority = "explicit"
 
 [tool.poetry.dependencies]
 python = "~3.12"
-bs-config = { tag = "v1.0.1", extras = ["dotenv"], git = "https://github.com/BlindfoldedSurgery/bs-config.git" }
+bs-config = { version = "1.0.2", extras = ["dotenv"], source = "internal" }
 click = "^8.1.3"
 httpx = "^0.27.0"
 opentelemetry-api = "~1.25"
