--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[project]
+requires-python = "==3.12.*"
+
 [tool.poetry]
 name = "songlinker"
 description = "Links songs"
@@ -60,8 +63,22 @@ init_forbid_extra = true
 init_typed = true
 
 [tool.ruff.lint]
-extend-select = [
+select = [
+    "E4",
+    "E7",
+    "E9",
+    "F",
+    "FURB",
+    "G",
     "I001",
+    "LOG",
+    "PTH",
+    "Q",
+    "UP",
+]
+ignore = [
+    # redundant-open-modes
+    "UP015",
 ]
 
 [tool.ruff.lint.per-file-ignores]
