--- a/chart/templates/telegram_bot.yaml
+++ b/chart/templates/telegram_bot.yaml
@@ -11,6 +11,7 @@ kind: StatefulSet
 metadata:
   name: telegram-bot
 spec:
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       app: telegram-bot
