--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,40 +11,41 @@ jobs:
   lint:
     uses: BlindfoldedSurgery/actions-python/.github/workflows/lint.yml@v2
     with:
+      build-tool: uv
       python-version: '3.13'
 
   integration-test:
     runs-on: ubuntu-latest
     container: python:3.13-slim-bookworm
     steps:
-      - name: Install Poetry
-        run: pip install poetry==1.8.4
+      - name: Install uv
+        run: pipx install uv==0.5.6
       - uses: actions/checkout@v4
-      - run: poetry install
+      - run: uv sync
       - name: Run tests
         env:
           SONGLINK_API_TOKEN: ${{ secrets.SONGLINK_API_TOKEN }}
-        run: poetry run pytest -m "integration" src/
+        run: uv run pytest -m "integration" src/
 
   unit-test:
     runs-on: ubuntu-latest
     container: python:3.13-slim-bookworm
     steps:
-      - name: Install Poetry
-        run: pip install poetry==1.8.4
+      - name: Install uv
+        run: pipx install uv==0.5.6
       - uses: actions/checkout@v4
-      - run: poetry install
+      - run: uv sync
       - name: Run tests
-        run: poetry run pytest -m "not integration" src/
+        run: uv run pytest -m "not integration" src/
 
   build-container-image:
     needs:
       - lint
       - unit-test
       - integration-test
-    uses: BlindfoldedSurgery/actions-container/.github/workflows/build-image-docker.yml@v4
+    uses: preparingforexams/actions-container/.github/workflows/build-image-kaniko.yml@v3
     with:
-      platform: "linux/arm64"
+      runner-name-build: warp-ubuntu-latest-arm64-2x
       push-image: ${{ github.ref_name == github.event.repository.default_branch }}
 
   deploy:
@@ -61,4 +62,4 @@ jobs:
   clean:
     concurrency: cleanup
     needs: [ deploy ]
-    uses: BlindfoldedSurgery/actions-container/.github/workflows/clean.yml@v4
+    uses: preparingforexams/actions-container/.github/workflows/clean.yml@v4
