--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,42 +1,48 @@
 [project]
 requires-python = "==3.13.*"
-
-[tool.poetry]
 name = "songlinker"
 description = "Links songs"
 version = "3.0.0"
-authors = ["BlindfoldedSurgery <team@blindfolded.surgery>"]
-license = "MIT"
+authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
+classifiers = [
+    "Private :: Do Not Upload",
+    "License :: OSI Approved :: MIT License",
+]
 
-[[tool.poetry.source]]
+dependencies = [
+    "bs-config [dotenv] ==1.1.0",
+    "click >=8.1.3, <9.0.0",
+    "httpx >=0.27.0, <0.28.0",
+    "opentelemetry-api ==1.28.*",
+    "opentelemetry-sdk ==1.28.*",
+    "opentelemetry-exporter-otlp-proto-grpc ==1.28.*",
+    "opentelemetry-instrumentation-httpx",
+    "opentelemetry-instrumentation-logging",
+    "pydantic ==2.10.*",
+    "sentry-sdk >=2.0.0, <3.0.0",
+]
+
+[dependency-groups]
+dev = [
+    "mypy ==1.13.*",
+    "pytest >=8.0.0, <9.0.0",
+    "pytest-mock >=3.11.1, <4.0.0",
+    "pytest-recording >=0.13.0, <0.14.0",
+    "ruff ==0.8.1",
+    "vcrpy >=6.0.0, <7.0.0",
+]
+
+[[tool.uv.index]]
 name = "internal"
 url = "https://pypi.bjoernpetersen.net"
-priority = "explicit"
+explicit = true
 
-[tool.poetry.dependencies]
-python = "~3.13"
-bs-config = { version = "1.1.0", extras = ["dotenv"], source = "internal" }
-click = "^8.1.3"
-httpx = "^0.27.0"
-opentelemetry-api = "~1.28"
-opentelemetry-sdk = "~1.28"
-opentelemetry-exporter-otlp-proto-grpc = "~1.28"
-opentelemetry-instrumentation-httpx = "*"
-opentelemetry-instrumentation-logging = "*"
-pydantic = "~2.10"
-sentry-sdk = "^2.0.0"
-
-[tool.poetry.group.dev.dependencies]
-mypy = "~1.13"
-pytest = "^8.0.0"
-pytest-mock = "^3.11.1"
-pytest-recording = "^0.13.0"
-ruff = "0.8.1"
-vcrpy = "^6.0.0"
+[tool.uv.sources]
+bs-config = { index = "internal" }
 
 [build-system]
-requires = ["poetry-core>=1.3.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 markers = [
