--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,11 +38,11 @@ jobs:
       - integration-test
     uses: preparingforexams/actions-container/.github/workflows/build-image-kaniko.yml@v4
     with:
-      runner-name-build: warp-ubuntu-latest-arm64-2x
+      runner-name-build: warp-ubuntu-2404-arm64-2x
       push-image: ${{ github.ref_name == github.event.repository.default_branch }}
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: github.ref_name == github.event.repository.default_branch
     needs:
       - build-container-image
