--- a/chart/templates/telegram_bot.yaml
+++ b/chart/templates/telegram_bot.yaml
@@ -44,3 +44,10 @@ spec:
             allowPrivilegeEscalation: false
             capabilities:
               drop: [ ALL ]
+          resources:
+            requests:
+              cpu: 10m
+              memory: 64Mi
+            limits:
+              cpu: 100m
+              memory: 128Mi
