--- a/chart/templates/secrets.yaml
+++ b/chart/templates/secrets.yaml
@@ -5,14 +5,13 @@ metadata:
   name: secrets
 spec:
   secretStoreRef:
-    name: doppler-prep
+    name: scaleway-prep-songlinker-bot
     kind: ClusterSecretStore
-  target:
-    name: secrets
+  data:
+    - secretKey: SENTRY_DSN
+      remoteRef:
+        key: "name:sentry-dsn"
+        decodingStrategy: None
   dataFrom:
-    - find:
-        path: "SONGLINKER_"
-      rewrite:
-        - regexp:
-            source: "SONGLINKER_(.+)"
-            target: "$1"
+    - extract:
+        key: "name:manual-secrets"
