Refresh secrets less often

--- a/chart/templates/secrets.yaml
+++ b/chart/templates/secrets.yaml
@@ -4,6 +4,7 @@ kind: ExternalSecret
 metadata:
   name: secrets
 spec:
+  refreshInterval: "24h"
   secretStoreRef:
     name: scaleway-prep-songlinker-bot
     kind: ClusterSecretStore
