--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "mypy ==1.16.*",
+    "pyright ==1.1.401",
     "pytest >=8.0.0, <9.0.0",
     "pytest-mock >=3.11.1, <4.0.0",
     "pytest-recording >=0.13.0, <0.14.0",
@@ -49,24 +49,8 @@ markers = [
     "integration",
 ]
 
-[tool.mypy]
-strict = true
-check_untyped_defs = true
-plugins = ["pydantic.mypy"]
-
-[[tool.mypy.overrides]]
-module = "tests.*"
-check_untyped_defs = true
-allow_untyped_defs = true
-allow_incomplete_defs = true
-
-[[tool.mypy.overrides]]
-module = "vcr"
-ignore_missing_imports = true
-
-[tool.pydantic-mypy]
-init_forbid_extra = true
-init_typed = true
+[tool.pyright]
+strict = [ "src/songlinker/**/*" ]
 
 [tool.ruff.lint]
 select = [
