--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
 
 dependencies = [
     "bs-config [dotenv] ==1.1.1",
+    "bs-nats-updater ==2.0.0",
     "click >=8.1.3, <9.0.0",
     "httpx >=0.28.1, <0.29.0",
     "opentelemetry-api ==1.34.*",
@@ -39,6 +40,7 @@ explicit = true
 
 [tool.uv.sources]
 bs-config = { index = "internal" }
+bs-nats-updater = { index = "internal" }
 
 [build-system]
 requires = ["hatchling"]
