--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "opentelemetry-api ==1.34.*",
     "opentelemetry-sdk ==1.34.*",
     "opentelemetry-exporter-otlp-proto-grpc ==1.34.*",
+    "opentelemetry-instrumentation-asyncio",
     "opentelemetry-instrumentation-httpx",
     "opentelemetry-instrumentation-logging",
     "pydantic ==2.11.*",
@@ -29,6 +30,7 @@ dependencies = [
 dev = [
     "pyright ==1.1.402",
     "pytest >=8.0.0, <9.0.0",
+    "pytest-asyncio==1.0.0",
     "pytest-mock >=3.11.1, <4.0.0",
     "pytest-recording >=0.13.0, <0.14.0",
     "ruff ==0.12.1",
