--- a/chart/templates/telegram-bot.yaml
+++ b/chart/templates/telegram-bot.yaml
@@ -1,13 +1,6 @@
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: telegram-bot
-spec:
-  clusterIP: None
----
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: telegram-bot
 spec:
@@ -15,7 +8,6 @@ spec:
   selector:
     matchLabels:
       app: telegram-bot
-  serviceName: telegram-bot
   replicas: {{ if .Values.isEnabled }}1{{ else }}0{{ end }}
   template:
     metadata:
@@ -36,7 +28,7 @@ spec:
             - name: ENABLE_TELEMETRY
               value: "true"
             - name: OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
-              value: https://api.honeycomb.io
+              value: http://collector.opentelemetry-system:4317
           envFrom:
             - secretRef:
                 name: secrets
