--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pyright ==1.1.405",
+    "mypy==1.18.*",
     "pytest >=8.0.0, <9.0.0",
     "pytest-asyncio==1.2.0",
     "pytest-mock >=3.11.1, <4.0.0",
