--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,8 +4,15 @@ on:
     branches: [ main ]
   pull_request: { }
 
+permissions:
+  contents: read
+
 jobs:
   required-meta:
+    permissions:
+      contents: read
+      pull-requests: write
+      checks: write
     uses: BlindfoldedSurgery/actions-meta/.github/workflows/required.yml@v1
 
   lint:
@@ -37,6 +44,9 @@ jobs:
       - unit-test
       - integration-test
     uses: preparingforexams/actions-container/.github/workflows/build-dual-image-kaniko.yml@v7
+    permissions:
+      contents: read
+      packages: write
     with:
       push-image: ${{ github.ref_name == github.event.repository.default_branch }}
 
@@ -57,6 +67,8 @@ jobs:
   deploy:
     runs-on: ubuntu-24.04
     if: github.ref_name == github.event.repository.default_branch
+    permissions:
+      contents: write
     needs:
       - build-container-image
     steps:
@@ -69,3 +81,5 @@ jobs:
     concurrency: cleanup
     needs: [ deploy ]
     uses: preparingforexams/actions-container/.github/workflows/clean.yml@v7
+    permissions:
+      packages: write
