--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ classifiers = [
 ]
 
 dependencies = [
-    "bs-config [dotenv] ==1.2.0",
-    "bs-nats-updater ==2.1.2",
+    "bs-config [dotenv] ==3.0.0",
+    "bs-nats-updater ==3.0.0",
     "click >=8.1.3, <9.0.0",
     "httpx >=0.28.1, <0.29.0",
     "opentelemetry-api ==1.38.*",
@@ -53,6 +53,9 @@ build-backend = "uv_build"
 [tool.pytest.ini_options]
 markers = [
     "integration",
+]
+addopts = [
+    "--import-mode=importlib",
 ]
 
 [tool.pyright]
